--- a/team.html
+++ b/team.html
@@ -1,1 +1,11 @@
-
+<font size=+2 color="blue">У нашій групі присутні насупні учасники та наявний такий розподіл ролей:
+ </font><br>
+<ul>
+  <li>Наш керівник-розробник - Veronika Pasichnyk</li>
+  <li>Розробник сторінок сайту - Ruslana Grishkina</li>
+  <li> 
+    <ul>Наші тестувальники:
+    <li>Anna Fabr</li>
+    <li>Діана</li>
+    </ul>
+</ul>
